fixed the issue with dark mode

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -58,6 +58,11 @@ html {
 }
 
 .container-dark {
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100vh;
+
     .container-left {
         background-color: black;
         color: white;
